2002-11-27 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add eps_avg.
	* slab.cpp: Ditto.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Better check for uniform Slabs.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Improve detection of non-zero minima.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Rename left/right to lower/upper.
	* slabdisp.cpp: Ditto.
	* slabdisp.h: Ditto.
	* slabmode.cpp: Ditto.
	* slabmode.h: Ditto.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Change threshold for complex modes.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Major in change in the way PML is defined.
	* slab.h: Ditto.
	* slabmode.cpp: Ditto.

2002-06-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Fix copy-and-paste error.

2002-06-05 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Make comparison with zero more robust.

2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve support for complex modes.

2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve support for surface plasmons.

2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve safe_mult heuristics.

2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Fix TE_TM polarisation.
	* slab.cpp: Lower precision.

2002-05-28 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve stability for TEM mode.
	* slaboverlap.cpp: Ditto.

2002-05-13 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve symmetry for backward calc.

2002-05-08 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Check values arguments of eps_at and mu_at.
        * slab.h: Ditto.

2002-05-07 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Use Material::eps_mu.