@@ -836,8 +836,9 @@ void Slab_M::build_modeset(const vector<Complex>& kt)
       if (imag(kz) > 0)
         kz = -kz;
 
-    if (real(kt[i]) < -1e-6) // Backward mode.
-      kz = -kz;
+    if (global.polarisation == TM) // Temporary kludge.
+      if (real(kt[i]) < -1e-6) // Backward mode.
+        kz = -kz;
 
     Polarisation pol = global.polarisation;
     if (global.polarisation == TE_TM)
